...
  ProductService._();
  static final ProductService instance = ProductService._();

  final List<Product> _products = const [
    Product(
      id: 'p1',
      title: 'Signature Hoodie',
      price: '£25.00',
      description: 'Our classic Signature Hoodie, comfortable and warm.',
      collection: 'Gifts',
      imageUrl: 'assets/images/p1.png',
    ),
    Product(
...
